# ChangeLog for x11-themes/adwaita-icon-theme
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/adwaita-icon-theme/ChangeLog,v 1.20 2015/07/19 12:29:29 klausman Exp $

  19 Jul 2015; Tobias Klausmann <klausman@gentoo.org>
  adwaita-icon-theme-3.14.1.ebuild:
  Stable on alpha, bug 553500

  17 Jul 2015; Agostino Sarubbo <ago@gentoo.org>
  adwaita-icon-theme-3.14.1-r1.ebuild:
  Stable for ia64, wrt bug #551814

  13 Jul 2015; Jeroen Roovers <jer@gentoo.org>
  adwaita-icon-theme-3.14.1-r1.ebuild:
  Stable for HPPA (bug #551814).

  07 Jul 2015; Markus Meier <maekke@gentoo.org>
  adwaita-icon-theme-3.14.1-r1.ebuild:
  arm stable, bug #551814

  26 Jun 2015; Agostino Sarubbo <ago@gentoo.org>
  adwaita-icon-theme-3.14.1-r1.ebuild:
  Stable for x86, wrt bug #551814

  21 Jun 2015; Mikle Kolyada <zlogene@gentoo.org>
  adwaita-icon-theme-3.14.1-r1.ebuild:
  amd64 stable wrt bug #551814

  21 Jun 2015; Jeroen Roovers <jer@gentoo.org>
  adwaita-icon-theme-3.14.1-r1.ebuild:
  Stable for PPC64 (bug #551814).

*adwaita-icon-theme-3.16.2.1 (10 Jun 2015)

  10 Jun 2015; Gilles Dartiguelongue <eva@gentoo.org>
  +adwaita-icon-theme-3.16.2.1.ebuild:
  Version bump.

*adwaita-icon-theme-3.16.2 (09 Jun 2015)

  09 Jun 2015; Gilles Dartiguelongue <eva@gentoo.org>
  +adwaita-icon-theme-3.16.2.ebuild:
  Version bump for Gnome 3.16.

  07 Jun 2015; Markus Meier <maekke@gentoo.org>
  adwaita-icon-theme-3.14.1.ebuild:
  arm stable, bug #534012

  29 Mar 2015; Jeroen Roovers <jer@gentoo.org>
  adwaita-icon-theme-3.14.1.ebuild:
  Stable for HPPA (bug #534012).

*adwaita-icon-theme-3.14.1-r1 (22 Mar 2015)

  22 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  +adwaita-icon-theme-3.14.1-r1.ebuild:
  Stop installing the /usr/share/cursors/xorg-x11/default symlink, it messes up
  cursors in some non-GNOME desktop environments (bug #543488). Instead, rely
  on env variables set by the session; for GNOME, make sure you have