@@ -5,18 +5,16 @@ DIST adwaita-icon-theme-3.14.1.tar.xz 17581976 SHA256 b776a7ad58c97f4c1ede316e44
 DIST adwaita-icon-theme-3.16.2.1.tar.xz 18860704 SHA256 b4556dfbf555d4fac12d4d5c12f7519de0d43ec42a1b649611439a50bf7acb96 SHA512 a38d59d54e204f8c2ab8c8ef2d6120dad636c5534293578692d1fb9a288e5862596117fa938eddf752137ef27e1d1a86eb0a1a046b87961a84c5673df58a5eec WHIRLPOOL e126870d234438baf6037fd2e66a7a6df185bd2658ac5021b3dcca37cd7e009411a9e0df78bab239cba9db3becfd295d77d684ce9c6aca004ee247896902fc94
 DIST adwaita-icon-theme-3.16.2.tar.xz 18507060 SHA256 9c6662ad739cdb32d0ffe638f54e5033c5ea6f53e7f8c2b412ec64b8e7e1b4c2 SHA512 4f9f8c979e984765941cb659af7e9d1585b4146d71a82af2490c84db2a7f9fc632b85baf9c90b6096b394ae56964628a522b00de6e1cf4ada31bbdddda27cfca WHIRLPOOL 1ba3383bb202dc7ee10b7119a770096b1d89a58607949261d621df272a3455ed2b45607a9fb88763af3a987bedbe54686d3a631a49164d0371d57b35da75cf58
 DIST tango-gentoo-v1.1.tar.gz 29322 SHA256 518efa4257c8e689488399db23397a89f4dcd5990ce537ef6215860ad5606eb0 SHA512 87d47ddab68361db6d99866c51705dcb3e198f8345a1096859acf2c6cca5099dd23c7fb30d124f52c4933ea38fd45fadffbbe6ecbdfa84f5b60938a4824f9045 WHIRLPOOL 9e1635a505ea48f4fe8bdb3b8b3b43cfb9cf99e3204194c51361b198886e719921cfacbc15f9f6407aa7d0c4af178e24c74b998fc370fa2329040e5be1baf153
-EBUILD adwaita-icon-theme-3.14.1-r1.ebuild 2136 SHA256 17e2ac0556ba8b20d8712d41a52051d9130373141394ab6524fd333ebb7472cd SHA512 54228bd804aeabd22a18239299cdf50eaa1c0258adf7ebb682ce04555db9273df022b72ddb839039f48edc0522f3685922bd5f77aa10936ddbb7d97a5d29415f WHIRLPOOL 9e0d307861f34b91242eec99c5c3b47ea3157b984cda66fe6e079213402f75f6adc6817b37a3e8f29aa29dce6c75a605102a09236850b65e56d2208ce1978384
+EBUILD adwaita-icon-theme-3.14.1-r1.ebuild 2137 SHA256 3bd06237c7f5502fd554d168ef1d36ad450bb666c35490cfbe95addd764629f9 SHA512 2262d78600ee667f81e57385917f4e8d669e242a4d6628237957e148a000a93882b2928a3485333f1ef7e2b2cf11f3c194f6f724c5f12f095fc3fa8aa523d498 WHIRLPOOL dc2b60f55249e6da297125289e1e394ff9ac8d76196857c618cb505c0305c2306644a024564e5a6989742f72a8398e4797bca3669d5e4c4340504544311728a8
 EBUILD adwaita-icon-theme-3.14.1.ebuild 1803 SHA256 2ff5107f6f637a71ec86c422f46cd1c97ba9b66d8b59ebaf58a2925b75f707e7 SHA512 821d66f5481933c651065b83eeb5b746314861d21141eaba615f1ebe705a433f84ad9853f135faed106dc6e0ada9f24425812b9a71b16d7d8691cd52e439e3ec WHIRLPOOL d535be4d2f295284a98aab122189d53b59f0140814194ae0e4e40d171c129736cdc7a31b658b598e24ec4643a67b29b25c4be6cd2111894fad4779ff345f0091
 EBUILD adwaita-icon-theme-3.16.2.1.ebuild 2255 SHA256 47b30ca45fd2a2594995ffbe255ecc660c62cbed3d9199bb9fb966403474dfa6 SHA512 2e53d4de92ebd0ecfcafdddc2f5e692beb17c5e0fed577f0a6cc6a10fde0424b2f134e5e17c6d5e674021cdb052bc8cb9c781398326dc89952535369cfb9f366 WHIRLPOOL e1e7f513847561893fffaeb73191ec726d6505b8402a768b79910aa1cddd8059abe16dabe3fcc56c857e2c6c5ac4f28e80dfed926dff661bb8ecc973301e310b
 EBUILD adwaita-icon-theme-3.16.2.ebuild 2253 SHA256 efa5d038a5fedd388d7693d29e2b1e485824a8087ebcf9dd5c436386a878f91c SHA512 d83c330d22d6ac5b686596891f0baaeadf51a25a359d2d23502753fed4f72855f560b6f4adacc8a981623e8ab902b74892a84a5009851b499c516729231ac6a3 WHIRLPOOL fc78b0b4210a8df077c7fc965eea2fc8d93cef619ae51cf1ef363d81121cb7131f98cb51dffea0cc7909322695df3d9c0b154a8ba090fe080150b5a39c749e79
-MISC ChangeLog 3109 SHA256 cfb5a5cf6012a2416c05d8b13761e3db37b24674c854db7fa6aaea9bece12b6c SHA512 042a74393a44807b3e348451bc455180a86a46f457e120a997f0effa60af1b03fb4e24b6c4c15fd69e1d188d40409255dddaa56a545ce867c791d981aa701b69 WHIRLPOOL dfd7aff0cd0dac5a24fdfa424d5965fbd994580798630fd5f74f4dc2693c95802371da96bfbf130a4f9b1f2f14a6116bf60fdf1b56135eacee45d8d0bb187adf
+MISC ChangeLog 3221 SHA256 321fd6914af992b88b72abceef449526b9896285b34a1bd1484faa8281d0d9e2 SHA512 3e3536d338c988c00eccc2cf5b0e8ea9b1bf56d52d6d10faaeef3ab87773c7e07db4e86fc3b22d260af63b1f84f0d5bb358e1f949c2d6cbd352d7fc4b4ee0cd9 WHIRLPOOL bca1ef3b739309a366a7dbf942202bb3f8b6e06d7f0d6459ff76b0778b084d39355273cfb4e996345ea253c4baf05c22e6c3d641a6fb95117b977a580b805ee2
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iKYEAREIAGYFAlWrmCpfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOglxACfSOJDC4iTZcoeqOubiWDAtnM2
-No4AnivpBFBJEWEx2KLSyJvf6E/RKOY6
-=fF18
+iEYEAREIAAYFAlWzfiQACgkQCaWpQKGI+9QmawCeOHhRbAWraO66w47b7mTvikDy
+D54AnAz3kxW39pCAqOwC0mLAdFzuXUZM
+=9O9L
 -----END PGP SIGNATURE-----
