@@ -6,25 +6,15 @@ DIST gnome-themes-standard-3.12.0.tar.xz 5911004 SHA256 a05d1b7ca872b944a69d0c0c
 DIST gnome-themes-standard-3.14.2.3.tar.xz 2884424 SHA256 d82a1cf90be3397deadea46d3ba396a46943c7e141ebc70cf833956b5794e479 SHA512 4d106b86be9cac33f641f346eaa7b8213c9725a7dc19b1192c13fb0feda4e8a62b31f0aa73d80bdd20adfa3be56d378c178b7bff8173b24b1c957d15e76b346a WHIRLPOOL 74d6fc47bd0a5a47b4028efc114a6b50211f6fa226e5057e5cfa4f863676af83f2581cfb71b7c69c4e1b4e489eee76c979472b5c2b03cdcc193f5ae794e686ba
 DIST gnome-themes-standard-3.16.2.tar.xz 2866556 SHA256 59eb79a59d44b5cd8daa8de1e7559fb5186503dcd78e47d0b72cb896d8654b9f SHA512 483e63e1f01d6a0c26a07def12f19d59406a2f89202db599876cff8542215b4d5eb8a054805eb16a4e027c76399f4bb498ed326e136ecf482c71f5a0b8cb5556 WHIRLPOOL ce585f3f17220538bbea025c201b3939a69b3dfba4186fc6312c63ea4e290a3dbfd526f93f0f3396e92b2e57908a936c442278a7a5323c0c0c0c571337a2caf8
 EBUILD gnome-themes-standard-3.12.0.ebuild 1760 SHA256 73cba1e1b1d574f398f4bf5fbfae107cc2f7be44c2b91fd39e9126d4efc9785d SHA512 fd3704788976ae02056b431ad6b068d2199f6b1c34dd73da7c09d814e196622340193309ac6cc6d9704d6282e76e4915b0e29273e5101cde58ea8e6cbb58c0a8 WHIRLPOOL 5eb6c47ac5533fccb1cc5b18d0d20d62ec0d48be11a35e6b99c73f25ee0a842269c78fcc8e20f66ae975f13b9fc53d97a86738601293c33d00ff7f07ed8c8d3d
-EBUILD gnome-themes-standard-3.14.2.3-r2.ebuild 2372 SHA256 76e8da4f29c602d1b79529ee4439d90b75ea18b252084b0fe095a64fb091bb68 SHA512 06aef6275d0392de6d0be065c820c26c1d47013c50bf34ff071d0ac11544758e1abdbb9caefb0e4a85d118f32890733d1968862d73f683b7f355b2db069f2b5a WHIRLPOOL 2aa4c11118ba53b110da9ad75ac0e479615f53a073c27e325fec2f41a347fac52e6b62a8223b839c100364ebca72ff8bc570b7927aee92f4401f0f23ff53ce22
+EBUILD gnome-themes-standard-3.14.2.3-r2.ebuild 2373 SHA256 9ed152cc59b90dce458fd3e9b89abc6230a3e1e0cfc8ed7d602e8b0e21dbf769 SHA512 beeb3940bb121c9409acea6a85343818db406bc95d95dcf15e248c0dea847ca23dc5271fed4664cd2ca83014104e7ba78cf68062f3e34649c59f8753b7a9a214 WHIRLPOOL 27668b410ed3149a777718f03d4190bcdac389f8608d38c3eb124be778f99f69211fe1a92ea5326b56561f210c803a99c554b81e2b60aeeaffcd0af2d19db47b
 EBUILD gnome-themes-standard-3.14.2.3.ebuild 1413 SHA256 e3ee1591a73ee9b475c6d75334503fde3e4e7da99acd4c547f285037e5ac6c8a SHA512 f0ec4d0b640a7f09810e450c3908830d58982e43af1f277d2136a55799ac2551a3300fffc0e16b2b14a568918f918d967ad8ac405e918269713a38cae6acbc71 WHIRLPOOL ab108ade128b172d205b7f88a3528a3e9e2986b2f8af23878aea0b3133102086aacb4f06314aab11145fcaf0a7e34b38ef42b60311ba19334352a33c7b60e229
 EBUILD gnome-themes-standard-3.16.2.ebuild 2372 SHA256 ede622853cd671f453f26a29666139ffe3b28b8465d4fca36bf5b439eeba26ea SHA512 a5dde92717f8d2782e62e86a7dd7c7335256b24bdcf80c0ddc0c4ca20d246aabe4817f6242704d5b40945e563213bece658e58b14bd5929b33eae37e27334c21 WHIRLPOOL 95e1d8800006b9b5b185824584500b1f5810bc01152a4f84a50d1326146fd3e9ed2a64bdc05f7cd05ecaf3cdc05752da54b1f03aab956efa7e5479ed000f51e3
-MISC ChangeLog 13795 SHA256 b55396539924a1e552a980169dff838ff2695cd87fc6b83d78e66bceab4a496e SHA512 2a184cb8791da564faf24dca47c57fd13943b749464b492fd11ecd8bc1cc9fc11071f77eb295209febbbe372dcab0fc99f80cd2a9b25eb7082dbe8f95d3705c3 WHIRLPOOL 7234280108be81a63ee5067886528c00e6234bd92dc276e017a5f8878beddb5150cbd0cac5ce2e65e8ebd7ad74738194e1acd45a72578ab46997c3a2333f7bd3
+MISC ChangeLog 13917 SHA256 216de078db951aa6b849179027cbfb7beb9cf3fe0be5e9259b6ba10ba427a962 SHA512 6c33d877614070eb58a41af55a37731f02704d438224cdfb58a98a2748f86af4764812ca37fa36057d0516715a76cd19048f3b02601d2bf473d9eda641583046 WHIRLPOOL 0a2507b69e9e78694dc06c51325c0a126a2b3cdd14dc46b3ea03264f92294ec61e504b6c9011da0978056300d721f88ca170943ffe20ee47a8b96594780135d7
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVqSK5AAoJELp701BxlEWfGBYP/2FRWRXfkOCLnjCEhcFCi8gL
-uia7jz+eXYfvGh3tHfXnDlcIS2IDWnKx2/RE2W4mK2NrBMU8ZjN/oyfvyAb95BdY
-RScfVDJK7qns9wzJcVRbWsPzDOOt/2zLGovEaz+bI8aw/hzTxNcUshR3q2MokAz7
-MM5n+WmN0TLnfKxPVcn0KJGsAi2Zuvz9LhJTEy0XuNYrasyw0NtIYreQrF3l4w8t
-xI8spIOqKyMYWyufEFuh2UV0iSdDvLthKoPAV/3C0CZlEMG6ORglAYPPopKQBhlE
-nWxRHQhMph21XPsn015ym1byvrxsWJCyrJkbmRswHI9Oj/3o+XsW3b9xGBepBUSq
-PfVoN6hsMmIYvZXhoYu2Ss4+zIfzjuPHrYZ8W7bGhPfJyeLcllwSqJySibwdgf6m
-32U5BSuE8Go0tNp5m69M5vfEaGWt23JrLexwilvnp1rjFkQ4M1TQV8f9zoqkP1LY
-H4n3dcLMb7XKwEhKtLhZoSaPu97NN+dqodYQnyl5As+g2oFy4rKN90QNj65tnPo+
-L9b8ThogkAYWe39s5k3GpeMQ2hUDcar4ePsi6umxQiNQxOiz+JLQiX/g38ql77vn
-GEj0tvMmDqb6eRJdd6v1UmM0e1Jtq5JBNN5MEj8efFTSXAQVMpHPaRxmn8n/j7bk
-O+vpT1L5CWkJTy+24kmd
-=NEQt
+iEYEAREIAAYFAlWzfi8ACgkQCaWpQKGI+9TVKACaAz3Van/JdeUtHpBy5CHlqE1n
+9TsAn0qJN+XQrEmv3wzuWMs+Nwpg/xsu
+=2Bau
 -----END PGP SIGNATURE-----
