@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-themes-standard
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes-standard/ChangeLog,v 1.86 2015/07/17 15:43:53 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes-standard/ChangeLog,v 1.87 2015/07/25 12:16:46 pacho Exp $
+
+  25 Jul 2015; Pacho Ramos <pacho@gentoo.org>
+  gnome-themes-standard-3.14.2.3-r2.ebuild:
+  ppc stable wrt bug #551814
 
   17 Jul 2015; Agostino Sarubbo <ago@gentoo.org>
   gnome-themes-standard-3.14.2.3-r2.ebuild:
