@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/adwaita-icon-theme
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/adwaita-icon-theme/ChangeLog,v 1.20 2015/07/19 12:29:29 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/adwaita-icon-theme/ChangeLog,v 1.21 2015/07/25 12:16:35 pacho Exp $
+
+  25 Jul 2015; Pacho Ramos <pacho@gentoo.org>
+  adwaita-icon-theme-3.14.1-r1.ebuild:
+  ppc stable wrt bug #551814
 
   19 Jul 2015; Tobias Klausmann <klausman@gentoo.org>
   adwaita-icon-theme-3.14.1.ebuild:
